# ComfyUI-CLIPSeg

./: README.md  pyproject.toml  requirements.txt
custom_nodes/: clipseg.py
